--- a/Dissertation/sections/misc/acknowledgements.tex
+++ b/Dissertation/sections/misc/acknowledgements.tex
@@ -1,6 +1,6 @@
 \begin{acknowledgements}
 
-I would like to thank my supervisor, Dr Matthias Hennig, 
+I would like to thank my supervisor, Dr Javier Escudero, for his guidance and support throughout the project and the staff of the Cognitive and Computational Neuroscience Lab, Centro de Tecnolog\`{i}a Biom\'{e}dica (CTB), Madrid for their kind hospitality and helpful advice. 
 
 
 \end{acknowledgements}
